--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "@emotion/styled": "10.0.27",
+    "bootstrap": "4.5.3",
     "formik": "2.1.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.1",
+    "twitter-bootstrap": "2.1.1",
     "yup": "0.29.1"
   },
   "devDependencies": {
